--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "ml-levenberg-marquardt": "^3.1.1"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.3.9-alpha.2",
+    "@openhps/core": ">=0.3.9",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@openhps/core": "^0.3.9-alpha.2",
+    "@openhps/core": "^0.3.9",
     "@openhps/csv": "0.1.0-alpha.61",
     "@types/chai": "^4.2.22",
     "@types/ml-levenberg-marquardt": "^3.1.0",
