--- a/package.json
+++ b/package.json
@@ -48,44 +48,44 @@
     "rf"
   ],
   "dependencies": {
-    "ml-levenberg-marquardt": "^3.1.1"
+    "ml-levenberg-marquardt": "^4.1.0"
   },
   "peerDependencies": {
     "@openhps/core": ">=0.3.9",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@openhps/core": "^0.3.9",
-    "@openhps/csv": "0.1.0-alpha.61",
-    "@types/chai": "^4.2.22",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@openhps/core": "^0.3.33",
+    "@openhps/csv": "0.1.6",
+    "@types/chai": "^4.3.1",
     "@types/ml-levenberg-marquardt": "^3.1.0",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.9.6",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "chai": "^4.3.4",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": ">=8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^36.1.0",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.31",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "chai": "^4.3.6",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": ">=8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-prettier": ">=4.0.0",
-    "husky": "^7.0.2",
-    "mocha": "^9.1.1",
+    "husky": "^7.0.4",
+    "mocha": "^10.0.0",
     "mocha-junit-reporter": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.6.2",
     "reflect-metadata": ">=0.1.13",
-    "shx": "^0.3.3",
-    "standard-version": "^9.3.1",
-    "terser-webpack-plugin": "^5.2.4",
-    "ts-node": "^10.2.1",
-    "typedoc": "^0.22.4",
-    "typescript": "^4.4.3",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "shx": "^0.3.4",
+    "standard-version": "^9.3.2",
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-node": "^10.7.0",
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   },
   "nyc": {
     "branches": 0,
