--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
     "type": "git",
     "url": "https://github.com/OpenHPS/openhps-rf.git"
   },
+  "bugs": {
+    "url": "https://github.com/OpenHPS/openhps-rf/issues"
+  },
+  "homepage": "https://openhps.org",
   "publishConfig": {
     "access": "public"
   },
+  "sideEffects": false,
   "main": "./dist/cjs/index.js",
-  "types": "./dist/cjs/index.d.ts",
-  "module": "./dist/esm/index.js",
-  "exports": {
-    "require": "./dist/cjs/index.js",
-    "import": "./dist/esm/index.js"
+  "types": "./dist/types/index.d.ts",
+  "unpkg": "./dist/web/openhps-rf.min.js",
+  "jsdelivr": "./dist/web/openhps-rf.min.js",
+  "lsd:module": true,
+  "browser": {
+    "typescript": false,
+    "microtime": false
   },
-  "unpkg": "dist/web/openhps-mqtt.min.js",
-  "jsdelivr": "dist/web/openhps-mqtt.min.js",
+  "module": "./dist/esm5/index.js",
+  "es2015": "./dist/esm/index.js",
   "files": [
     "dist/**/*",
     "src/**/*"
@@ -29,13 +36,18 @@
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
     "lint": "eslint src/**",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
-    "build": "npm run clean && npm-run-all --parallel build:esm build:cjs build:typedoc && npm run build:webpack",
-    "build:esm": "tsc --module es2015 --outDir dist/esm",
-    "build:cjs": "tsc --module commonjs  --outDir dist/cjs",
-    "build:webpack": "npm-run-all --parallel build:webpack:*",
-    "build:webpack:prod": "webpack --env prod --progress --",
-    "build:webpack:dev": "webpack --env dev --progress --",
+    "build": "npm run clean && npm-run-all --parallel build:ts:* && npm run build:webpack",
+    "build:components": "componentsjs-generator",
+    "build:quick": "npm-run-all --parallel build:ts:* && npm run build:webpack",
     "build:typedoc": "typedoc --options docs/typedoc.json",
+    "build:ts:cjs": "tsc --build ./tsconfig/tsconfig.bundle.cjs.json",
+    "build:ts:esm": "tsc --build ./tsconfig/tsconfig.bundle.esm.json",
+    "build:ts:esm5": "tsc --build ./tsconfig/tsconfig.bundle.esm5.json",
+    "build:ts:types": "tsc --build ./tsconfig/tsconfig.bundle.types.json",
+    "build:webpack": "npm-run-all --parallel build:webpack:*",
+    "build:webpack:prod": "webpack --env prod --",
+    "build:webpack:dev": "webpack --env dev --",
+    "deploy:typedoc": "gh-pages -d ./docs/out",
     "publish:development": "npm run bump:beta && npm publish --tag dev",
     "publish:beta": "npm run bump:beta && npm publish --tag beta",
     "publish:release": "npm run bump:beta && npm publish --tag latest",
@@ -51,7 +63,7 @@
     "ml-levenberg-marquardt": "^4.1.0"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.3.9",
+    "@openhps/core": ">=0.3.33",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
