--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@openhps/core": "^0.3.46",
     "@openhps/csv": "0.1.8",
+    "@openhps/rdf": "^0.1.31",
     "@types/chai": "^4.3.3",
     "@types/ml-levenberg-marquardt": "^3.1.0",
     "@types/mocha": "^9.1.1",
