--- a/package.json
+++ b/package.json
@@ -68,38 +68,39 @@
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@openhps/core": "^0.3.46",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@openhps/core": "^0.4.11",
     "@openhps/csv": "0.1.8",
-    "@openhps/rdf": "^0.1.31",
-    "@types/chai": "^4.3.3",
+    "@openhps/rdf": "^0.1.48",
+    "@types/chai": "^4.3.4",
     "@types/ml-levenberg-marquardt": "^3.1.0",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.7.19",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "chai": "^4.3.6",
-    "eslint": "^8.23.1",
-    "eslint-config-prettier": ">=8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.6",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.14.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "buffer": "^6.0.3",
+    "chai": "^4.3.7",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": ">=8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^40.0.0",
     "eslint-plugin-prettier": ">=4.2.1",
-    "husky": "^8.0.1",
-    "mocha": "^10.0.0",
-    "mocha-junit-reporter": "^2.0.2",
+    "husky": "^8.0.3",
+    "mocha": "^10.2.0",
+    "mocha-junit-reporter": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.4",
     "reflect-metadata": ">=0.1.13",
     "shx": "^0.3.4",
     "standard-version": "^9.5.0",
     "terser-webpack-plugin": "^5.3.6",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.15",
-    "typescript": "^4.8.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "typedoc": "^0.23.25",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "nyc": {
     "branches": 0,
