ci: build process

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,17 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
             **/src/vocab
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Installing dependencies
         run: |
-          npm install
+          yarn install
       - name: Build
         run: |
           npm run build
@@ -51,14 +51,14 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
             **/src/vocab
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Quality
         run: |
           npm run lint
@@ -83,21 +83,21 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
             **/src/vocab
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Load test and coverage cache
         uses: actions/cache@v2
         with:
           path: |
             **/test-results.xml
             **/coverage
-          key: ${{ runner.os }}-test-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-test-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Test
         run: |
           npm run cover:ci
@@ -113,20 +113,20 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
             **/src/vocab
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Load document cache
         uses: actions/cache@v2
         with:
           path: |
             **/docs/out
-          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Build documentation
         run: |
           npm run build:typedoc
@@ -144,7 +144,7 @@ jobs:
         with:
           path: |
             **/docs/out
-          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Publish Documentation
         uses: actions/upload-artifact@v3
         with:
@@ -170,7 +170,7 @@ jobs:
           path: |
             **/test-results.xml
             **/coverage
-          key: ${{ runner.os }}-test-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-test-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Publish unit test results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
@@ -197,14 +197,14 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
             **/src/vocab
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Configure Publish
         run: |
           git config --global user.name 'CI'
@@ -237,14 +237,14 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
             **/src/vocab
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
       - name: Configure Publish
         run: |
           git config --global user.name 'CI'
