ci: fix issues with npm packaging and cache

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,13 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Installing dependencies
         run: |
           yarn install
@@ -50,13 +50,13 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Quality
         run: |
           npm run lint
@@ -81,20 +81,20 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Load test and coverage cache
         uses: actions/cache@v2
         with:
           path: |
             **/test-results.xml
             **/coverage
-          key: ${{ runner.os }}-test-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-test-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Test
         run: |
           npm run cover:ci
@@ -110,19 +110,19 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Load document cache
         uses: actions/cache@v2
         with:
           path: |
             **/docs/out
-          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-docs-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Build documentation
         run: |
           npm run build:typedoc
@@ -140,7 +140,7 @@ jobs:
         with:
           path: |
             **/docs/out
-          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-docs-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Publish Documentation
         uses: actions/upload-artifact@v4
         with:
@@ -166,7 +166,7 @@ jobs:
           path: |
             **/test-results.xml
             **/coverage
-          key: ${{ runner.os }}-test-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-test-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Publish unit test results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
@@ -193,13 +193,13 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Configure Publish
         run: |
           git config --global user.name 'CI'
@@ -232,20 +232,24 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('yarn.lock') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
           path: |
             **/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/yarn.lock') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('yarn.lock') }}-${{ github.run_number }}
       - name: Configure Publish
         run: |
           git config --global user.name 'CI'
           git config --global user.email 'ci@openhps.org'
       - name: Bump version release
         run: |
-          npm run bump:release
+            if [ ! -d "dist" ]; then
+              echo "dist folder does not exist. Exiting..."
+              exit 1
+            fi
+            npm run bump:release
       - name: Publish to NPM (master)
         uses: JS-DevTools/npm-publish@v1
         with:
